<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:title="@string/pref_title"
    android:key="pref_key_settings">

    <com.RightDirection.ShoppingList.views.CustomCheckBoxPreference
        android:key="@string/pref_key_cross_out_action"
        android:summary="@string/pref_cross_out_action_summary"
        android:title="@string/pref_cross_out_action"
        android:defaultValue="true"/>

    <com.RightDirection.ShoppingList.views.CustomCheckBoxPreference
        android:key="@string/pref_key_show_images"
        android:title="@string/pref_show_images"
        android:defaultValue="true"/>

    <com.RightDirection.ShoppingList.views.CustomCheckBoxPreference
        android:key="@string/pref_key_show_categories"
        android:title="@string/pref_show_categories"
        android:defaultValue="false"/>

    <com.RightDirection.ShoppingList.views.CustomCheckBoxPreference
        android:key="@string/pref_key_show_help_screens"
        android:title="@string/pref_key_show_help_screens"
        android:defaultValue="true"
        />

    <!--
    Пока отключим возможность получения и загрузки писем с файлом json,
    т.к. настройка эл. почты слишком сложна для простого пользователя.
    <PreferenceScreen
        android:key="email_settings"
        android:title="@string/email_settings_to_load_shopping_lists"
        android:persistent="false">
        <com.RightDirection.ShoppingList.views.CustomEditTextPreference
            android:key="@string/pref_key_email_host"
            android:title="@string/email_host"
            android:summary="%s"/>
        <com.RightDirection.ShoppingList.views.CustomEditTextPreference
            android:key="@string/pref_key_email_port"
            android:title="@string/email_port"
            android:inputType="number"
            android:summary="%s"/>
        <com.RightDirection.ShoppingList.views.CustomEditTextPreference
            android:key="@string/pref_key_email_login"
            android:title="@string/email_login"
            android:inputType="textEmailAddress"
            android:summary="%s"/>
        <com.RightDirection.ShoppingList.views.CustomEditTextPreferenceForPassword
            android:key="@string/pref_key_email_password"
            android:title="@string/email_password"
            android:inputType="textPassword"/>
    </PreferenceScreen>
    -->

</PreferenceScreen>