<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_sign_in"
            android:icon="@drawable/ic_sign_in"
            android:orderInCategory="90"
            android:title="@string/action_sign_in"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_profile"
            android:orderInCategory="91"
            android:title="@string/action_profile"
            android:icon="@drawable/ic_person_outline"
            app:showAsAction="never"
            android:visible="false"/>
        <item
            android:id="@+id/action_friends"
            android:orderInCategory="95"
            android:title="@string/action_friends"
            android:icon="@drawable/ic_friends"
            app:showAsAction="never"
            android:visible="false"/>
        <item
            android:id="@+id/action_receive_shopping_lists"
            android:orderInCategory="95"
            android:title="@string/action_receive_shopping_lists"
            android:icon="@drawable/ic_receive_shopping_lists"
            app:showAsAction="never"
            android:visible="false"/>
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/menu_2">
        <item
            android:id="@+id/action_edit_categories_list"
            android:orderInCategory="101"
            android:title="@string/action_edit_categories_list"
            android:icon="@drawable/ic_categories"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_edit_products_list"
            android:orderInCategory="100"
            android:title="@string/action_edit_products_list"
            android:icon="@drawable/ic_products"
            app:showAsAction="never" />
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/menu_3">
        <!--
        Пока отключим возможность получения и загрузки писем с файлом json,
        т.к. настройка эл. почты слишком сложна для простого пользователя.
        <item
            android:id="@+id/action_receive_shopping_list_by_email"
            android:orderInCategory="101"
            android:title="@string/action_receive_shopping_list_by_email"
            app:showAsAction="never" />
            -->
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="102"
            android:title="@string/action_settings"
            android:icon="@drawable/ic_settings"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_feedback"
            android:orderInCategory="120"
            android:title="@string/feedback"
            android:icon="@drawable/ic_feedback"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_estimate"
            android:orderInCategory="130"
            android:title="@string/estimate"
            android:icon="@drawable/ic_star"
            app:showAsAction="never" />
    </group>

</menu>
