<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <group android:id="@+id/menuGroup">
        <item
            android:id="@+id/action_profile"
            android:icon="@drawable/ic_person_outline"
            android:orderInCategory="91"
            android:title="@string/action_profile"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_friends"
            android:icon="@drawable/ic_friends"
            android:orderInCategory="95"
            android:title="@string/action_friends"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_black_list"
            android:icon="@drawable/ic_black_list"
            android:orderInCategory="97"
            android:title="@string/action_black_list"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_receive_shopping_lists"
            android:icon="@drawable/ic_receive_shopping_lists"
            android:orderInCategory="99"
            android:title="@string/action_receive_shopping_lists"
            app:showAsAction="never" />
    </group>

</menu>
