<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item android:id="@+id/imgSendListByEmail"
        android:icon="@drawable/ic_send_by_email"
        android:title="@string/send_by_email"
        android:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/imgChangeListName"
        android:icon="@drawable/ic_rename"
        android:title="@string/change_list_name"
        android:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/imgEdit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        android:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/imgDelete"
        android:icon="@drawable/ic_remove_list"
        android:title="@string/delete"
        android:showAsAction="always"
        tools:ignore="AppCompatResource" />

</menu>