<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ItemActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etProductName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:hint="@string/product_name_hint"
        android:inputType="textCapSentences" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:layout_below="@+id/etProductName"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/product_picture"
        android:background="@android:drawable/ic_menu_crop" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSaveProduct"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/etProductName" />
</RelativeLayout>
