<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProductActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/category_name_hint"
        android:inputType="textCapSentences"
        android:imeOptions="flagNoExtractUi"
        android:textColor="@android:color/black"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:textColor="@android:color/black"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/tvShortName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etShortName"
        android:layout_alignBottom="@+id/etShortName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/short_name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etShortName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etName"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/tvShortName"
        android:layout_toRightOf="@+id/tvShortName"
        android:ems="10"
        android:hint="@string/unit_name_hint"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textCapSentences"
        android:textColor="@android:color/black" />

</RelativeLayout>
